--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="hero-text">
           <h1>Shop Smart, Live Better</h1>
           <p>
-            Quality products, honest prices and attentive service – that’s our
+            Quality products, attractive prices and attentive service – that’s our
             promise. We’re currently selling through Amazon and Noon while we
             build a smarter online shopping experience.
           </p>
@@ -272,7 +272,6 @@
           <div class="credential-card">
             <h3>VAT Registration</h3>
             <p>VAT Number: <strong>310548531700003</strong></p>
-            <p>Effective from: 28&nbsp;July&nbsp;2024</p>
           </div>
           <div class="credential-card">
             <h3>Commercial Registration</h3>
