--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
-    <title>Sooqia – Shop Smart, Live Better</title>
+    <title>Sooqia – Shop Smart, Live Better</title>
     <meta
       name="description"
-      content="Sooqia is a Riyadh‑based e‑commerce brand offering curated home, lifestyle and technology products. Shop our collections on Amazon and Noon while we build our new online store."
+      content="Sooqia is a Riyadh-based e-commerce brand offering curated home, lifestyle and technology products. Shop our collections on Amazon and Noon while we build our new online store."
     />
     <!-- Google Fonts -->
     <link
@@ -40,7 +40,8 @@
             <li><a href="#categories">Categories</a></li>
             <li><a href="#marketplace">Marketplace</a></li>
             <li><a href="#credentials">Credentials</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <!-- CHANGED: Contact now points to dedicated page -->
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
         <button class="nav-toggle" aria-label="Toggle navigation">
@@ -55,12 +56,12 @@
         <div class="hero-text">
           <h1>Shop Smart, Live Better</h1>
           <p>
-            Quality products, attractive prices and attentive service – that’s our
+            Quality products, attractive prices and attentive service – that’s our
             promise. We’re currently selling through Amazon and Noon while we
             build a smarter online shopping experience.
           </p>
           <div class="hero-buttons">
-            <!-- Updated call‑to‑action buttons with direct links to our active marketplaces -->
+            <!-- Updated call-to-action buttons with direct links to our active marketplaces -->
             <a
               href="https://www.amazon.sa/s?me=AHTG33JVQXB6Y&language=en&marketplaceID=A17E79C6D8DWNP"
               target="_blank"
@@ -76,20 +77,19 @@
           </div>
         </div>
         <div class="hero-image">
-          <!-- Swapped for a dark‑themed illustration that matches our new brand palette -->
-          <img src="assets/hero_dark.png" alt="Sooqia e‑commerce illustration" />
+          <!-- Swapped for a dark-themed illustration that matches our new brand palette -->
+          <img src="assets/hero_dark.png" alt="Sooqia e-commerce illustration" />
         </div>
       </div>
     </section>
 
-
     <!-- About Section -->
     <section id="about" class="about-section">
       <div class="container">
-        <h2>About Sooqia</h2>
+        <h2>About Sooqia</h2>
         <p>
-          Founded in Riyadh, Sooqia is an up‑and‑coming e‑commerce brand that
-          curates high‑quality products for your home, lifestyle and
+          Founded in Riyadh, Sooqia is an up-and-coming e-commerce brand that
+          curates high-quality products for your home, lifestyle and
           wellbeing. Our mission is to make smart shopping simple and joyful by
           focusing on quality, value and service. We believe that shopping
           should be convenient, trustworthy and rewarding. While our own online
@@ -115,7 +115,7 @@
           <div class="value-card">
             <h3>Values</h3>
             <p>
-              Customer‑centricity, honesty, quality, innovation and respect
+              Customer-centricity, honesty, quality, innovation and respect
               for our community and environment.
             </p>
           </div>
@@ -153,7 +153,7 @@
             <div class="category-icon"><i class="fa fa-heart"></i></div>
             <h3>Health &amp; Beauty</h3>
             <p>
-              Self‑care products and grooming tools to help you look and feel
+              Self-care products and grooming tools to help you look and feel
               your best.
             </p>
           </div>
@@ -192,14 +192,14 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Contact Section (cleaned – no phone/WhatsApp/form) -->
     <section id="contact" class="contact-section">
       <div class="container">
-        <h2>Contact Us</h2>
+        <h2>Contact Us</h2>
         <p class="section-lead">
-          We'd love to hear from you. Whether you have questions, feedback or
-          suggestions for products you'd like us to stock, please get in touch.
+          We’ll reply within <strong>24–48 hours</strong>. Prefer to book a meeting? Use our scheduling link below.
         </p>
+
         <div class="contact-grid">
           <div class="contact-info">
             <div class="contact-item">
@@ -210,52 +210,25 @@
               </div>
             </div>
             <div class="contact-item">
-              <i class="fa fa-phone"></i>
-              <div>
-                <h4>Call Us</h4>
-                <p><a href="tel:+966574697713">+966 57 469 7713</a></p>
-              </div>
-            </div>
-            <div class="contact-item">
-              <i class="fab fa-whatsapp"></i>
-              <div>
-                <h4>WhatsApp</h4>
-                <p><a href="https://wa.me/966574697713" target="_blank">+966 57 469 7713</a></p>
-              </div>
-            </div>
-            <div class="contact-item">
               <i class="fa fa-map-marker-alt"></i>
               <div>
                 <h4>Location</h4>
-                <p>Riyadh, Saudi Arabia</p>
+                <p>Riyadh, Saudi Arabia</p>
               </div>
             </div>
           </div>
-          <div class="contact-form">
-            <form
-              action="https://formspree.io/f/mayvlvoy"
-              method="POST"
-              class="form"
-            >
-              <div class="form-field">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required />
-              </div>
-              <div class="form-field">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required />
-              </div>
-              <div class="form-field">
-                <label for="message">Message</label>
-                <textarea
-                  id="message"
-                  name="message"
-                  rows="4"
-                  required
-                ></textarea>
-              </div>
-              <button type="submit" class="btn primary-btn">Send Message</button>
-            </form>
+
+          <!-- CTAs leading to dedicated page + Calendly -->
+          <div class="contact-form" style="display:flex;flex-direction:column;gap:0.75rem;">
+            <a class="btn primary-btn" href="contact.html">Open Contact Form</a>
+            <a
+              class="btn secondary-btn"
+              href="https://calendly.com/sooqiaksa/investor-networking-meeting-sooqia-com"
+              target="_blank" rel="noopener"
+            >Schedule a Meeting</a>
+            <p style="margin:0.5rem 0 0;font-size:.95rem;opacity:.9">
+              For investment, product submissions, partnerships and more — please use the contact form.
+            </p>
           </div>
         </div>
       </div>
@@ -305,7 +278,8 @@
             <li><a href="#categories">Collections</a></li>
             <li><a href="#marketplace">Marketplace</a></li>
             <li><a href="#credentials">Credentials</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <!-- CHANGED: Footer contact goes to page -->
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="footer-social">
@@ -324,7 +298,7 @@
         </div>
       </div>
       <div class="container copyright">
-        <p>&copy; 2025 Sooqia. All rights reserved.</p>
+        <p>&copy; 2025 Sooqia. All rights reserved.</p>
       </div>
     </footer>
 
@@ -332,9 +306,12 @@
       // Toggle mobile navigation
       const navToggle = document.querySelector('.nav-toggle');
       const nav = document.querySelector('.navigation');
-      navToggle.addEventListener('click', () => {
-        nav.classList.toggle('open');
-      });
+      if (navToggle && nav) {
+        navToggle.addEventListener('click', () => {
+          nav.classList.toggle('open'));
+        });
+      }
     </script>
   </body>
 </html>
+
