--- a/contact.html
+++ b/contact.html
@@ -1,37 +1,139 @@
-<!-- Full-width single column form using Google Forms -->
-<div class="form form-card" role="region" aria-label="Contact Sooqia Form">
-  <h2 style="margin:0 0 12px;">Contact Sooqia</h2>
-  <p style="opacity:.9;margin:0 0 16px;">
-    Please fill out the form below and we’ll reply within <strong>24–48 hours</strong>.
-  </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Contact Us | Sooqia</title>
+  <meta name="description" content="Contact Sooqia. We’ll reply within 24–48 hours." />
 
-  <!-- Responsive Google Form Embed -->
-  <div style="position:relative; width:100%; max-width:100%;">
-    <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLSdO-_ujoeDJbJCBIdKoG81uZljWOsUbHK7sKTQczGvD2NVBTA/viewform?embedded=true"
-      width="100%"
-      height="1100"
-      frameborder="0"
-      marginheight="0"
-      marginwidth="0"
-      style="border:0; min-height: 1000px;"
-      loading="lazy"
-      title="Contact Sooqia Form">
-      Loading…
-    </iframe>
-  </div>
+  <!-- Fonts & Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <!-- Fallback link -->
-  <p style="margin-top:10px; font-size:.95rem;">
-    If the form doesn’t load, <a href="https://docs.google.com/forms/d/e/1FAIpQLSdO-_ujoeDJbJCBIdKoG81uZljWOsUbHK7sKTQczGvD2NVBTA/viewform"
-    target="_blank" rel="noopener">click here to open it directly</a>.
-  </p>
+  <!-- Site CSS (GitHub Pages-safe relative path) -->
+  <link rel="stylesheet" href="./styles.css" />
 
-  <!-- Optional meeting booking (Calendly) -->
-  <div class="calendly-embed">
-    <h3 style="margin:18px 0 8px;">Optional: Book a Meeting</h3>
-    <div class="calendly-inline-widget"
-         data-url="https://calendly.com/sooqiaksa/investor-networking-meeting-sooqia-com"
-         style="min-width:320px;height:700px;"></div>
-  </div>
-</div>
+  <!-- Page-specific refinements (safe to keep inline) -->
+  <style>
+    .contact-section { padding: 60px 0; }
+    .contact-page-wrap { max-width: 1100px; margin: 0 auto; }
+    .form-card { width:100%; background: rgba(0,0,0,.06); padding: 24px; border-radius: 14px; box-shadow: 0 6px 18px rgba(0,0,0,.06); }
+    .form-card h2 { margin: 0 0 12px; }
+    .form-lead { opacity: .9; margin: 0 0 16px; }
+    /* Make the Google Form iframe fluid */
+    .gform-embed { position: relative; width: 100%; }
+    .gform-embed iframe { width: 100%; border: 0; min-height: 1000px; }
+    /* Space before Calendly block */
+    .calendly-embed { margin-top: 24px; }
+    /* Highlight active nav item */
+    .navigation a[aria-current="page"] { color: var(--primary, #0d6efd); font-weight: 600; }
+  </style>
+</head>
+<body>
+  <!-- Header & Navigation (same as index) -->
+  <header class="site-header">
+    <div class="container nav-container">
+      <a href="index.html#home" class="logo">
+        <img src="assets/logo.png" alt="Sooqia logo" class="logo-img" />
+      </a>
+      <nav id="navigation" class="navigation">
+        <ul>
+          <li><a href="index.html#home">Home</a></li>
+          <li><a href="index.html#about">About</a></li>
+          <li><a href="index.html#categories">Categories</a></li>
+          <li><a href="index.html#marketplace">Marketplace</a></li>
+          <li><a href="index.html#credentials">Credentials</a></li>
+          <li><a href="contact.html" aria-current="page">Contact</a></li>
+        </ul>
+      </nav>
+      <button class="nav-toggle" aria-label="Toggle navigation">
+        <i class="fa fa-bars"></i>
+      </button>
+    </div>
+  </header>
+
+  <main>
+    <!-- Contact -->
+    <section class="contact-section">
+      <div class="container contact-page-wrap">
+        <h1>Contact Sooqia</h1>
+        <p class="form-lead">Please fill out the form below and we’ll reply within <strong>24–48 hours</strong>.</p>
+
+        <!-- Google Form Embed (responsive) -->
+        <div class="form-card">
+          <div class="gform-embed">
+            <iframe
+              src="https://docs.google.com/forms/d/e/1FAIpQLSdO-_ujoeDJbJCBIdKoG81uZljWOsUbHK7sKTQczGvD2NVBTA/viewform?embedded=true"
+              height="1100"
+              loading="lazy"
+              title="Contact Sooqia - Google Form">
+              Loading…
+            </iframe>
+          </div>
+
+          <!-- Fallback link if iframe is blocked -->
+          <p style="margin-top:10px; font-size:.95rem;">
+            If the form doesn’t load, <a href="https://docs.google.com/forms/d/e/1FAIpQLSdO-_ujoeDJbJCBIdKoG81uZljWOsUbHK7sKTQczGvD2NVBTA/viewform" target="_blank" rel="noopener">open it in a new tab</a>.
+          </p>
+
+          <!-- Optional meeting booking -->
+          <div class="calendly-embed">
+            <h3 style="margin:18px 0 8px;">Optional: Book a Meeting</h3>
+            <div class="calendly-inline-widget"
+                 data-url="https://calendly.com/sooqiaksa/investor-networking-meeting-sooqia-com"
+                 style="min-width:320px;height:700px;"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer (same as index) -->
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div class="footer-brand">
+        <img src="assets/logo.png" alt="Sooqia" class="footer-logo" />
+        <p>Shop smart, live better – bringing curated products to your doorstep.</p>
+        <ul class="footer-contact">
+          <li><i class="fa fa-envelope"></i> <a href="mailto:info@sooqia.com">info@sooqia.com</a></li>
+          <li><i class="fa fa-map-marker-alt"></i> Riyadh, Saudi Arabia</li>
+        </ul>
+      </div>
+      <div class="footer-links">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="index.html#about">About</a></li>
+          <li><a href="index.html#categories">Collections</a></li>
+          <li><a href="index.html#marketplace">Marketplace</a></li>
+          <li><a href="index.html#credentials">Credentials</a></li>
+          <li><a href="contact.html" aria-current="page">Contact</a></li>
+        </ul>
+      </div>
+      <div class="footer-social">
+        <h4>Follow Us</h4>
+        <div class="social-icons">
+          <a href="https://www.instagram.com/sooqia" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://twitter.com/sooqia" target="_blank" aria-label="Twitter"><i class="fab fa-x-twitter"></i></a>
+          <a href="https://www.linkedin.com/company/sooqia" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="container copyright">
+      <p>&copy; 2025 Sooqia. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <!-- Calendly script -->
+  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
+
+  <!-- Mobile nav (same as index) -->
+  <script>
+    const navToggle = document.querySelector('.nav-toggle');
+    const nav = document.querySelector('.navigation');
+    if (navToggle && nav) {
+      navToggle.addEventListener('click', () => nav.classList.toggle('open'));
+    }
+  </script>
+</body>
+</html>
+
